<resources>
    <string name="app_name">Sign Buddy</string>
    <string name="title_activity_alesson">ALessonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="lesson_mode">Lesson Mode</string>
    <string name="connect_to_device">Connect to Device</string>
    <string name="welcome_to_sign_buddy">Welcome to Sign Buddy</string>
    <string name="image_of_the_sign_buddy_logo">Image of the Sign Buddy logo</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="scanning">Scanning</string>
    <string name="BLE_not_supported">BLE not supported</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="enabling_bluetooth">Enabling bluetooth</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
</resources>